test/mutation_analysis/s0066_plus_one/hafis/ablation_o3_full/mutants/6/result.txt
./test/mutation_analysis/s0066_plus_one/hafis/ablation_o3_full/mutants/6/Solution.java:27: error: unreachable statement
        if (carry != 0) {
        ^
1 error
